# stm32-unicoremx-project

./: CMakeLists.txt  README.md  config.cmake  libucmx.ld
cmake/: stm32-toolchain.cmake
lib/: CMakeLists.txt
lib/usart1/: usart1.c  usart1.h
src/: CMakeLists.txt
src/blink/: CMakeLists.txt  main.c
src/blinkcpp/: CMakeLists.txt  main.cpp
